--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
 </head>
 <body>
     <header>
-
+        <div class="header--text">
+            <h1 id="time">14:58:00</h1>
+        </div>
     </header>
-
+    <script src="main.js"></script>
 </body>
 </html>
