--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div class="header--text">
-            <h1 id="time">14:58:00</h1>
+            <h1 id="time" onload="currentTime()">00:00:00</h1>
         </div>
     </header>
     <script src="main.js"></script>
