--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <div class="header--text">
+        <div id="header" class="header--text">
             <h1 id="time" onload="currentTime()">00:00:00</h1>
         </div>
     </header>
