--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <link rel="icon" href="images/favicon.png"/>
 </head>
 <body>
-    <header>
+    <header onclick="blockChangeBackground()">
         <div id="header" class="header--text">
-            <h1 id="time" onload="currentTime()">00:00:00</h1>
+            <h1 id="time" onload="currentTime()">Loading..</h1>
         </div>
     </header>
     <script src="main.js"></script>
