Added function which don't allow changing background color.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header onclick="blockChangeBackground()">
-        <div id="header" class="header--text">
+        <div id="header--text">
             <h1 id="time" onload="currentTime()">Loading..</h1>
         </div>
     </header>
