Adding new directories

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!--Нормализация стилей-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.css">
     <!--Собственный стиль-->
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/main.css">
     <!--Подключение веб-шрифтов-->
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400|Open+Sans:300,400,800" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -19,6 +19,6 @@
             <h1 id="time" onload="currentTime()">Loading..</h1>
         </div>
     </header>
-    <script src="main.js"></script>
+    <script src="script/main.js"></script>
 </body>
 </html>
