--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <link rel="icon" href="images/favicon.png"/>
 </head>
 <body>
-    <header onclick="blockChangeBackground()">
-        <div id="header--text">
+    <header>
+        <div id="header-text">
             <h1 id="time" onload="currentTime()">Loading..</h1>
         </div>
     </header>
